--- a/assets/css/scss/_contact.scss
+++ b/assets/css/scss/_contact.scss
@@ -6,6 +6,9 @@
   width: 100%;
   position: relative;
   padding-bottom: 120px;
+  @include w599{
+    padding-bottom: 80px;
+  }
 }
 
 .contact-form {
@@ -14,6 +17,10 @@
   margin-top: 60px;
   @include w900{
     width: 80%;
+  }
+  @include w599{
+    width: 90%;
+    margin-top: 40px;
   }
   .required {
     color: red;
@@ -52,6 +59,9 @@
     margin: 0 auto;
     margin-top: 24px;
     width: 210px;
+    @include w599{
+      margin-top: 10px;
+    }
     &:hover{
       opacity: 0.9;
     }
@@ -93,6 +103,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      @include w599{
+        font-size: 14px;
+      }
     }
     .wpcf7-list-item-label {
       padding-bottom: 12px;
@@ -115,9 +128,16 @@
     position: relative;
     z-index: 2;
     border-radius: 30px;
+    @include w599{
+      width: 90%;
+      margin-top: 24px;
+    }
   }
   &__inner {
     padding: 80px 40px;
+    @include w599{
+      padding: 48px 20px;
+    }
   }
   &__title {
     text-align: center;
@@ -125,6 +145,9 @@
     font-size: 16px;
     color: #333;
     font-weight: 400;
+    @include w599{
+      font-size: 14px;
+    }
   }
 
   &__card {
@@ -133,6 +156,10 @@
     background: #f9f9f9;
     margin-top: 40px;
     border-radius: 30px;
+    @include w599{
+      width: 100%;
+      margin-top: 24px;
+    }
 
     &_inner {
       padding: 40px 40px 20px 40px;
@@ -146,6 +173,12 @@
       .tel {
         font-size: 48px;
         font-weight: 700;
+        @include w599{
+          font-size: 32px;
+        }
+        @include w375{
+          font-size: 28px;
+        }
       }
     }
   }
@@ -157,5 +190,13 @@
     font-size: 16px;
     font-weight: 400;
     color: #333;
+    @include w768{
+      width: 80%;
+    }
+    @include w599{
+      width: 90%;
+      margin-top: 40px;
+      font-size: 14px;
+    }
   }
 }
