--- a/assets/css/scss/_simulation.scss
+++ b/assets/css/scss/_simulation.scss
@@ -1,8 +1,14 @@
+@use "./common" as *;
+@use "./mixin" as *;
+
 .simulation__wrapper {
   background: #f6f6f6;
   width: 100%;
   position: relative;
   padding-bottom: 120px;
+  @include w599{
+    padding-bottom: 80px;
+  }
 }
 
 .calc {
@@ -12,12 +18,20 @@
   right: 45px;
   opacity: 0.1;
   z-index: 1;
+  @include w599{
+    width: 80px;
+    top: 96px;
+    right: 40px;
+  }
 }
 .simu-form {
   width: 500px;
   border-top: 1px solid #b0b0b0;
   margin: 0 auto;
   margin-top: 40px;
+  @include w768{
+    width: 100%;
+  }
 
   &__wrapper {
     width: 80%;
@@ -27,9 +41,16 @@
     position: relative;
     z-index: 2;
     border-radius: 30px;
+    @include w599{
+      width: 90%;
+      margin-top: 40px;
+    }
   }
   &__inner {
     padding: 80px 40px;
+    @include w599{
+      padding: 48px 20px;
+    }
   }
   &__title {
     text-align: center;
@@ -37,6 +58,9 @@
     font-size: 16px;
     color: #419438;
     font-weight: 700;
+    @include w599{
+      font-size: 14px;
+    }
   }
   .border {
     border-top: 1px solid #b0b0b0;
@@ -45,9 +69,11 @@
   b {
     display: block;
     margin-top: 20px;
-
     font-weight: 600;
     color: #333;
+    @include w599{
+      font-size: 14px;
+    }
   }
   .required {
     color: red;
@@ -61,6 +87,9 @@
     font-size: 14px;
     font-family: "Lato";
     display: flex;
+    @include w599{
+      font-size: 14px;
+    }
   }
   .wpcf7-radio {
     padding-top: 10px;
@@ -72,6 +101,9 @@
     margin-right: 10px;
     width: 15px;
     height: 15px;
+    @include w599{
+      font-size: 14px;
+    }
   }
   input[type="text"] {
     border: 2px solid #000;
@@ -80,6 +112,9 @@
     width: 100%;
     height: 50px;
     border-radius: 4px;
+    @include w599{
+      font-size: 14px;
+    }
   }
   input[type="email"] {
     border: 2px solid #000;
@@ -88,6 +123,9 @@
     width: 100%;
     height: 50px;
     border-radius: 4px;
+    @include w599{
+      font-size: 14px;
+    }
   }
   input[type="tel"] {
     border: 2px solid #000;
@@ -96,6 +134,9 @@
     width: 100%;
     height: 50px;
     border-radius: 4px;
+    @include w599{
+      font-size: 14px;
+    }
   }
   textarea {
     border: 2px solid #000;
@@ -104,17 +145,27 @@
     width: 100%;
     height: 160px;
     border-radius: 4px;
+    @include w599{
+      font-size: 14px;
+    }
   }
   .other {
     padding-top: 10px;
     p {
       display: flex;
       justify-content: space-between;
-    }
+      @include w768{
+        flex-direction: column;
+        }
+      }
     .wpcf7-form-control-wrap {
       display: flex;
       input[type="text"] {
         width: 300px;
+        @include w599{
+          width: 100%;
+          margin-left: 40px;
+          }
       }
     }
   }
@@ -154,6 +205,9 @@
   .checkbox {
     width: 15px;
     margin-right: 15px;
+    @include w599{
+      font-size: 14px;
+    }
   }
   .check {
     text-align: center;
@@ -163,6 +217,10 @@
   .wpcf7-list-item-label {
     font-weight: 500;
     font-size: 15px;
+    @include w599{
+      font-size: 14px;
+      font-weight: 600;
+    }
     a {
       color: #419438;
       border-bottom: 2px solid #419438;
